# mmud

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
characters/: example.toml
docs/: ROADMAP.md  cdb-mdb2-format.md  megamud-commands-reference.md  megamud-responses-reference.md  testing-plan.md
docs/re/: README.md  combat.md  data-formats.md  navigation.md  parsing.md  terminal.md  timing.md
docs/re/source/: README.md  bbs_login_sequence_handle.md  cash_upgrade_coins_decide.md  combat_event_parse.md  combat_flee_or_hide_decide.md  config_ini_load.md  game_ai_do_something.md  game_menu_prompt_parse.md  inventory_parse_response.md  item_name_match.md  loot_item_collect.md  network_receive_dispatch.md
src/mmud/: bot.py  commands.py  debug_log.py  events.py  session.py  terminal.py
src/mmud/automation/: commerce.py  (+16 more)
tests/: conftest.py  test_ansi.py  test_app_config_path.py  test_backstab.py  test_binary.py  test_bot.py  test_code_route.py  test_combat.py  test_commands.py  test_commerce.py  test_conditions.py  test_config.py  test_config_runtime.py  test_config_writer.py  test_connection.py  test_conversation_parser.py  test_cures.py  test_decision.py  test_doors.py  test_equip.py  test_events.py  test_exits_parser.py  test_game_state.py  test_graph.py  test_introspect.py  test_inventory.py  test_inventory_parser.py  test_item_db.py  test_items_automation.py  test_login.py  test_loop_runner.py  test_macros_md.py  test_matcher.py  test_messages.py  test_monster_db.py  test_navigation.py  test_navigator.py  test_party.py  test_party_parser.py  test_paths.py  (+30 more)
(+89 files in other folders)
