[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmud"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio", "pytest-unused-port"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
