[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmud"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["textual>=0.62.0", "tomlkit>=0.12.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio", "pytest-unused-port", "textual-dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
